Method subsections placeholders in p1.

--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -33,6 +33,10 @@
 
 Одно из первых определений задачи идентификации было дано
 Л.~Заде~\cite{zadeh_id_1956}.
+Согласно этому определению,
+``Идентификация состоит в отыскании по входным и выходным сигналам
+некоторой системы эквивалентной ей системы
+из некоторого заданного класса''~\cite{eykhoff_id_base,eykhoff_modern_id,lung_id_sys}.
 
 
 Н.С.~Райбман в предисловии к известной работе П.~Эйкхоффа~\cite{eykhoff_id_base}
@@ -79,6 +83,176 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 \section{Существующие методы идентификации нелинейных динамических систем и их свойства}  % {{{1
 
+Ввиду того, что задача идентификации сложных динамических систем всегда была актуальной,
+и привлекала внимание многих исследователей, было создано
+значительное количество методов и систем идентификации.
+Создание универсальной системы идентификации, безусловно подходящей для
+любой динамической системы, представляется практически нерешаемой задачей.
+Следовательно, каждый из существующих методов имеет свою область применения.
+Наиболее математически обоснованным являются методы идентификации
+линейных систем.
+Для очень узкого класса нелинейных систем является возможным
+получение аналитического выражения для значения параметра
+по измерениям входных и выходных сигналов. Чаще всего,
+для сложных динамических систем получить такую аналитическую
+зависимость невозможно. Поэтому широкое распространение получили методы
+с использованием параллельной модели, % TODO: cite
+в которых на вход и модели, и объекта подаётся один и тот же входной сигнал,
+и параметры модели настраиваются таким образом, чтобы выход модели
+был наиболее близким к выходу объекта. В какой-то мере
+именно такие методы отображают определение идентификации.
+Между собой эти методы отличаются способами настройки параметров модели.
+
+
+\subsection{Синхронный детектор} % {{{2
+
+Принцип работы синхронного детектора %  \cite{adopt_cont_sys} 
+% (рис.~\ref{f:sd1})
+заключается в том,
+что значение коэффициента модели модулируется либо гармоническим,
+либо случайным сигналом. Для выявления влияния
+изменения коэффициента на ошибку идентификации
+производится перемножение модулирующего сигнала с ошибкой
+идентификации. После усреднения данного сигнала
+получаем оценку значения градиента функции ошибки на
+пространстве параметров.
+
+% \begin{figure}[htb]
+% \centerline{
+%  \includegraphics[width=9cm]{lpics/sd1.eps}
+%  %\resizebox{9.0\scm}{!}{%
+%  %  \input{lpics/sd1.tex}
+%  %}
+% }
+% \caption{Система идентификации с синхронным детектором}
+% \label{f:sd1}
+% \end{figure}
+
+%В
+%\cite{Eykhoff,adopt_cont_sys}
+показано, что в квазистационарных условиях
+происходит смещение рабочей точки системы идентификации
+в направлении градиента функции качества,
+со скоростью, пропорциональной значению модуля этого градиента.
+
+% }}}2
+
+\subsection{Метод идентификации с переменной частотой пробного воздействия} % {{{2
+
+Принцип работы данного метода
+% (рис.~\ref{f:vsf1})
+основан на том, что на параметрический вход модели подаётся треугольный поисковый сигнал.
+Этот сигнал генерируется специальным генератором,
+состоящего из управляемого генератора прямоугольных колебаний, 
+счётного триггера и интегратора%  \cite{auto_optim_intask,adopt_cont_sys}.
+
+% \begin{figure}[htb]
+% \centerline{
+%  \includegraphics[width=11cm]{lpics/vsf1.eps}
+%  %\resizebox{11.0\scm}{!}{%
+%  %  \input{lpics/vsf1.tex}
+%  %}
+% }
+% \caption{Система идентификации с переменной частотой пробного воздействия}
+% \label{f:vsf1}
+% \end{figure} 
+
+Результаты предварительного моделирования показали,
+что данный метод, хоть и показывает хорошие результаты
+в задачах оптимизации, но для решения задач идентификации 
+практически не применим. Наличие дифференцирующего 
+звена делает данный метод особо чувствительным к шумам
+измерения, а в задачах идентификации с параллельной моделью
+влияние входного сигнала \( u(t) \)
+на ошибку измерения \( e(t) \) 
+имеет вид мультипликативного шума,
+что полностью нарушает процесс поиска.
+
+% }}}2
+
+\subsection{Метод случайного поиска} % {{{2
+
+Основа данного метода заключается в том, что
+очередном шаге сравнивается текущее и предыдущее
+значения ошибки идентификации, и решение о смешении
+рабочей точки принимается в соответствии с выбранной
+тактикой случайного поиска.
+% \cite{rastr_rand_search_adopt,rastr_intro,ivanov_stoh_alg_int}.
+
+Наиболее известными и распространённым
+являются линейная и нелинейная тактика
+%\cite{rastr_rand_search,gladkov_optim_nongrad}.
+При использовании линейной тактики
+в случае уменьшения ошибки идентификации
+производится шаг в том же направлении, что и предыдущий.
+В противном случае производится случайный шаг.
+При использовании нелинейной тактики
+случайный шаг делается в случае уменьшения ошибки.
+В противном случае делается шаг назад.
+
+Метод имеет широкий диапазон применимости,
+но проявляет свои преимущества на сложных 
+системах с большим количеством идентифицируемых параметров.
+В более простых случаях проявляется такой недостаток,
+как малая скорость поиска.
+
+% }}}2
+
+\subsection{Непараметрические методы} % {{{2
+
+При использовании этого метода идентификации
+роль модели играет нейронная сеть
+% (рис.~\ref{f:neuro})
+% \cite{bodyan_osn_theor_ann,nelles_nlsys_id,chen_nls_id_radial_basis}.
+Коэффициенты нейронной сети настраиваются каким-либо
+известным алгоритмом таким образом, чтобы
+достичь минимума ошибки.
+
+Использование нейронной сети в качестве модели позволяет иметь дело с
+объектами, структура которых неизвестна или же слишком сложна для построения
+традиционной модели.
+
+При этом результат подобной идентификации сложно, а зачастую и невозможно
+применить где-либо, кроме имитационного моделирования.  Структура и
+коэффициенты нейронной сети не дают представления о структуре объекта и его
+параметрах.  При проведении идентификации с использованием нейросетевой модели
+в достаточно сложных случаях нет гарантии завершения процесса настройки сети и
+затруднительно оценить скорость поиска при настройке сети.
+
+С точки зрения информационных критериев оценки качества систем идентификации,
+нейросетевая идентификация в большинстве случает не даёт непосредственной
+информации об параметрах изучаемого объекта.  В данной работе такие методы
+рассматриваться не будут.
+
+Тем не менее, нейронные сети можно использовать для настройка коэффициентов
+традиционной модели.  Такое использование может быть оправдано, если ввиду
+большой размерности выходного сигнала \(x\) или других причин, нет возможности
+сформировать скалярный критерий качества. В таком случае на первый слой
+нейронной сети можно подавать по-координатно выходы модели и объекта и
+проводить настройку нейронной сети таким образом, чтобы её выходные сигналы (а
+следовательно, и коэффициенты модели) обеспечивали минимум какого-либо
+синтетического критерия.
+
+% }}}2
+
+\subsection{Адаптивно-поисковая идентификация с возмущением параметра одной модели} % {{{2
+
+Метод адаптивно-поисковой идентификации с возмущением параметров одной модели
+изначально был разработан как метод поисковой оптимизации
+% \cite{mai_adopt_meth_direct,ivah_int_meth_direct,mai_iss_adop_alg_etalon,rastr_seu}.
+\cite{mich_92}
+Минимальные требования к априорной информации, хорошая помехоустойчивость и
+простота схемотехнической реализации позволили применить данный метод не только
+для решения задач оптимизации, но и для задач идентификации параметров сложных
+систем
+%\cite{mai_akt_meth_sear,mai_sear_meth_akt,mai_akt_id_robot,ivah_alg_id_parm,mai_sear_meth_akt_id_ns}.
+
+
+% }}}2
+
+\subsection{Адаптивно-поисковая идентификация с возмущением параметра пары моделей} % {{{2
+ Self
+% }}}2
 
 Основы идентификации систем управления~\cite{eykhoff_id_base,eykhoff_modern_id,gropp_methods_id,deith_method_id_ds,lung_id_sys,seidg_id_su,leondes_modern_tu,nelles_nlsys_id}
 
@@ -106,7 +280,6 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 Автоматическая оптимизация в задачах пространственного распределения~\cite{auto_optim_intask}
 
-Адаптивно-поисковые методы и алгоритмы оптимизации и идентификации динамических систем~\cite{mich_92}
 
 % }}}1
 
