Better problem statement in aref.

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -235,9 +235,9 @@
 їх повну або обмежену непридатність.
 
 
-Тому проблема ідентифікації динамічних систем, які проявляють хаотичну
-динаміку, або близьку до хаотичної, є
-\textit{актуальною}.
+Тому проблема
+ідентифікації параметрів складних технічних систем у режимі хаотичної динаміки
+є \textit{актуальною}.
 
 \smallskip
 \textbf{Зв'язок роботи з науковими програмами, планами, темами.}
@@ -2547,22 +2547,30 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 
 \xsect{ВИСНОВКИ}
 
-Основні наукові результати дисертаційної роботи полягають у наступному:
+У роботі вирішена науково-технічна проблема ідентифікації параметрів складних технічних
+систем у режимі хаотичної динаміки
+з метою забезпечення їх керованної поведінки. При цьому:
 
 \begin{itemize}
 
   \item
-  створено нові критерії ідентифікації, які, на відміну від тих, що
-  існують, придатні для аналізу стану та динаміки
-  хаотичних систем, що створить фізично зумовлене обґрунтування працездатності систем
-  ідентифікації;
+    створено нові критерії ідентифікації, які, на відміну від тих, що
+    існують, придатні для аналізу стану та динаміки
+    хаотичних систем, що створить фізично зумовлене обґрунтування працездатності систем
+    ідентифікації;
 
   \item
-  створено новий клас систем ідентифікації у межах
+    створено новий клас систем ідентифікації у межах
     адаптивно-пошуковой парадигми,
     які за рахунок використання колективної динаміки
     ансамблю пошукових агентів забезпечують
-    кращу якість ідентифікації;
+    кращу швидкість ідентифікації без істотного впливу на похибку ідентифікації;
+
+  \item
+    проведена перевірка працездатності запропанованих методів
+    на прикладах як відомих систем хаотичної динаміки,
+    так і на декількох інших динамічних систем, які проявляють
+    складну та хаотичну динаміку;
 
   \item
    визначено, що системи з сухим тертям з точки зору задачі ідентифікації
@@ -2575,8 +2583,8 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 
   \item
   проведено як комп'ютерне моделювання процесів ідентифікації систем
-    хаотичної динаміки, так і фізичное моделювання таких, що підтверджує адекватність
-    побудованих моделей.
+  хаотичної динаміки, так і фізичное моделювання таких, що підтверджує адекватність
+  побудованих моделей.
 
 
 \end{itemize}
