--- a/tikzsetup.tex
+++ b/tikzsetup.tex
@@ -21,6 +21,7 @@
   semiboldlinep/.style={draw=black,line width=1.2pt,->},
   infoline/.style={draw=gray,line width=1.4pt},
   boldline/.style={draw=black,line width=2.0pt},
+  boldlinep/.style={draw=black,line width=2.0pt,->},
   wire/.style={draw=black,line width=1.0pt},
   elelem/.style={draw=black,line width=1.5pt},
   subelem/.style={draw=black,dashed,line width=0.6pt}
