Add pic for cary freq id method (pgf)

--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -137,22 +137,21 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 \subsection{Метод идентификации с переменной частотой пробного воздействия} % {{{2
 
 Принцип работы данного метода
-% (рис.~\ref{f:vsf1})
+(рис.~\ref{atu:f:varfreq})
 основан на том, что на параметрический вход модели подаётся треугольный поисковый сигнал.
 Этот сигнал генерируется специальным генератором,
-состоящего из управляемого генератора прямоугольных колебаний, 
+состоящего из управляемого генератора прямоугольных колебаний,
 счётного триггера и интегратора%  \cite{auto_optim_intask,adopt_cont_sys}.
 
-% \begin{figure}[htb]
-% \centerline{
-%  \includegraphics[width=11cm]{lpics/vsf1.eps}
-%  %\resizebox{11.0\scm}{!}{%
-%  %  \input{lpics/vsf1.tex}
-%  %}
-% }
-% \caption{Система идентификации с переменной частотой пробного воздействия}
-% \label{f:vsf1}
-% \end{figure} 
+
+\begin{figure}[htb!]
+\begin{center}
+\input{p/varfreq.pgf}
+\end{center}
+\caption{Система идентификации с переменной частотой пробного воздействия}
+\label{atu:f:varfreq}
+\end{figure}
+
 
 Результаты предварительного моделирования показали,
 что данный метод, хоть и показывает хорошие результаты
