Add picture for API with 1 model (pgf)

--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -241,7 +241,16 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 простота схемотехнической реализации позволили применить данный метод не только
 для решения задач оптимизации, но и для задач идентификации параметров сложных
 систем
+(рис.~\ref{atu:f:apid1})
 %\cite{mai_akt_meth_sear,mai_sear_meth_akt,mai_akt_id_robot,ivah_alg_id_parm,mai_sear_meth_akt_id_ns}.
+
+\begin{figure}[htb!]
+\begin{center}
+\input{p/apid1.pgf}
+\end{center}
+\caption{Адаптивно-поисковая идентификация с возмущением параметра одной модели}
+\label{atu:f:apid1}
+\end{figure}
 
 
 % }}}2
