Add picture fir dual api method

--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -255,8 +255,17 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 % }}}2
 
-\subsection{Адаптивно-поисковая идентификация с возмущением параметра пары моделей} % {{{2
- Self
+\subsection{Адаптивно-поисковая идентификация с парой моделей и двумя генераторами с общим сбросом} % {{{2
+
+(рис.~\ref{atu:f:apid2})
+
+\begin{figure}[htb!]
+\begin{center}
+\input{p/apid2.pgf}
+\end{center}
+\caption{Адаптивно-поисковая идентификация с парой моделей и двумя генераторами с общим сбросом}
+\label{atu:f:apid2}
+\end{figure}
 % }}}2
 
 Основы идентификации систем управления~\cite{eykhoff_id_base,eykhoff_modern_id,gropp_methods_id,deith_method_id_ds,lung_id_sys,seidg_id_su,leondes_modern_tu,nelles_nlsys_id}
