Initial words about api1, api2

--- a/artrefs.bib
+++ b/artrefs.bib
@@ -403,6 +403,21 @@
 
 % ------------------------ PHD renamed -----------------------------------
 
+@Thesis{atu_phd_thesis,
+  author = {Гуда, А. И},
+  title = {Моделирование процессов адаптивно-поисковой идентификации нелинейных динамических систем},
+  % media = {text},
+  type  = {phdthesis},
+  major = {тех. наук},
+  majorcode = {01.05.02},
+  titleaddon = {защищена 18.10.2006},
+  location   = {Днепропетровск},
+  date   = {2006},
+  pagetotal =  {146},
+  langid = {russian},
+  language = {russian}
+}
+
 
 @Book{eykhoff_id_base,
   author = {Эйкхофф, Питер},
