--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -252,12 +252,67 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 \label{atu:f:apid1}
 \end{figure}
 
+Поисковой частота определяется
+значением функции качества:
+\( \omega = \omega_0 ( 1 + k_\omega F ) \).
+Управляемый генератор прямоугольных колебаний (УГПК, CRO, Controlled rectangular oscillator)
+создаёт прямоугольный сигнал \( g(t) \)
+заданной частоты и единичной амплитуды.
+В дальнейшем данный сигнал поступает на интегратор,
+формируя текущее значение параметра (поисковый сигнал) \( p(t) \):
+%
+\begin{equation}
+ p(t) = a_p + k_i \int\limits_{0}^{t} g(t) \, dt ,
+\label{atu:eq:api_integr}
+\end{equation}
+
+Скорость поиска $v = dp / dt$ при малых изменениях параметра
+оценивается как
+%
+\begin{equation}
+\label{atu:eq:vasi}
+  v
+  \approx
+  \frac{k_i^2 k_\omega \sin(\omega T_d) }{\omega} \nabla {F},
+\end{equation}
+%
+где
+$k_i$ --- коэффициент при интеграторе,
+$k_\omega$ --- коэффициент влияния функции качества на частоту,
+$T_d$ --- параметрическое запаздывание.
+
+Важным отличием данного метода от метода с переменной частотой пробных воздействий является
+отсутствие дифференцирующего звена, что повышает устойчивость метода к шумам измерения.
+Для оценивания усреднённого градиента функции качества используются
+динамические свойства самого идентифицируемого объекта, а именно --- запаздывание
+по параметру. Адаптивные свойства метода
+проявляются в двух эффектах.
+При удалении от искомого значения параметра частота поисковых колебаний
+уменьшается, что увеличивает интервал усреднения, и, как следствие ---
+позволяет выделить полезный сигнал на фоне помех.
+Уменьшение поисковой частоты автоматически увеличивает амплитуду поисковых колебаний,
+что позволяет уменьшить вероятность попадания в локальный экстремум.
+При приближении к искомому значению амплитуда поисковых колебаний уменьшается,
+что приводит к повышению точности идентификации.
+
+Тем не менее, данный метод также не лишён недостатков.
+Постоянные поисковые колебания приводят к возмущению динамики модели,
+которое не характерно для объекта. При определённых условиях
+такое возмущение может полностью нарушить процесс поиска.
+Например, такой эффект наблюдается при близости поисковой частоты к характерным частотам входного сигнала или
+собственных колебаний объекта.
+
+\Cmt{Связь поисковой частоты с временем оценивания и параметрическим запаздыванием}
+
 
 % }}}2
 
 \subsection{Адаптивно-поисковая идентификация с парой моделей и двумя генераторами с общим сбросом} % {{{2
 
-(рис.~\ref{atu:f:apid2})
+Предложенный в работе~\cite{atu_phd_thesis} метод идентификации
+нелинейных динамических систем с использованием
+пары моделей и двух генераторов с общим сбросом~(рис.~\ref{atu:f:apid2})
+лишён основных недостатков предыдущего метода.
 
 \begin{figure}[htb!]
 \begin{center}
@@ -266,6 +321,24 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 \caption{Адаптивно-поисковая идентификация с парой моделей и двумя генераторами с общим сбросом}
 \label{atu:f:apid2}
 \end{figure}
+
+
+В квазистационарном случае скорость поиска определяется следующим образом:
+%
+\begin{equation}
+\label{atu:eq:vugpk2}
+  v
+  \approx
+  \frac{k_i (\tau_l - \tau_r)}{\tau}
+  =
+  2 k_i k_\omega A \nabla F .
+\end{equation}
+
+За счёт увеличения затрат, связанных с удвоением количества основных элементов системы идентификации,
+удалось значительно повысить как точность, так и скорость идентификации.
+
+
+
 % }}}2
 
 Основы идентификации систем управления~\cite{eykhoff_id_base,eykhoff_modern_id,gropp_methods_id,deith_method_id_ds,lung_id_sys,seidg_id_su,leondes_modern_tu,nelles_nlsys_id}
