Add abstract.ua to aref

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -2762,7 +2762,7 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 
 Ключевые слова:
 хаотические системы,
-критерии идентификации,
+критерий идентификации,
 поисковый агент,
 координатор поиска,
 ансамблевые методы поисковой идентификации.
@@ -2789,9 +2789,57 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 Існуючи системи ідентифікації нелінійних динамічних об'єктів практично не
 здатні функціонувати у таких умовах.
 
+Проаналізовано існуючи методи ідентифікації та моделі динаміки пошуку.
+Визначено спільні риси систем ідентифікації,
+досліджено чинники, які не дозволяють використовувати їх
+для ідентифікації параметрів хаотичних систем. обґрунтована необхідність
+створення нових систем ідентифікації.
+
+Показано, что для створення систем ідентифікації, які були б працездатними
+в умовах хаотичної динаміки, необхідно використання інтегральних критеріїв.
+Розглянута множина фізичних обґрунтувань для створення критеріїв,
+як на прямому використанні фізичних законів, так і на емпіричних засадах.
+
+З метою підвищення швидкодії системи ідентифікації запропонована
+структура з використанням множини пошукових агентів і координатора пошуку.
+Створено методи оцінювання параметра трійкою пошукових агентів, як
+при безпосередньому використанні критерію, так і в разі застосування функції якості.
+Досліджено залежності похибки ідентифікації від метода та його параметрів.
+Введено групу методів роботи координаторів пошуку,
+визначено залежності якості ідентифікації від параметрів взаємодії
+координатора з агентами.
+Створено класифікацію систем ідентифікації систем, які можуть реалізовувати хаотичну динаміку,
+яка дозволяє не тільки стисло вказувати набір використаних методів,
+а синтезувати нові системи ідентифікації при появі нових методів роботи агентів та координаторів.
+Досліджено властивості множини запропонованих методів для штучної
+квазістаціонарній тестової системи. Обрана підмножина методів, які доцільно
+використовувати у подальшому дослідженні.
+
+Створено програмне забезпечення ``qontrol'',
+яке призначено для моделювання складних нелінійних динамічних
+систем, у тому числі при аналізі процесів ідентифікації систем хаотичної динаміки.
+
+Працездатність та властивості розроблених методів перевірено при
+рішенні задачі ідентифікації кількох нелінійних систем,
+як відомих систем хаотичної динаміки, так і нових.
+Було визначено, що існують системи, які не є хаотичними, але
+з точки зору ідентифікації мають з ними спільні риси.
+Досліджено вплив параметрів системи ідентифікації на якість її роботи,
+що дає підстави для адаптації цих параметрів. Визначено,
+що найбільший вплив мають вид критерію та параметри динаміки агентів.
+
+Властивості запропонованих методів ідентифікації досліджено
+на двох реальних фізичних об'єктах:
+генераторі Колпітца та системі зв'язаних релаксаційних елементів.
+Методи підтвердили свою працездатність, та виявлено,
+що залежності якості ідентифікації від її параметрів для реальних систем мають той же вигляд,
+що й для тестових.
+
+
+
 Ключові слова:
 хаотичні системи,
-критерії ідентифікації,
+критерій ідентифікації,
 пошуковий агент,
 координатор пошуку,
 ансамблеві методи пошукової ідентифікації.
@@ -2810,7 +2858,7 @@ The dissertation is devoted to
 
 Keywords:
 chaotic systems,
-identification criteria,
+identification criterion,
 searching agent,
 searching coordinator,
 ensemble methods of the searching indetification.
