Initial abstract translation in aref.

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -2746,28 +2746,6 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 
 
 
-\xsect{АННОТАЦИЯ}
-
-\textbf{\dissauthorRu}
-\textbf{\booknameRu}
-\textbf{--- На правах рукописи.}
-
-Диссертация на соискание ученой степени
-доктора
-\dissScopeRu\ {}
-по специальности
-\dissSpecId\ --- <<\dissSpecRu>>.
-\institutionRu, \belongRu, \cityRu, \bookyear.
-
-
-Ключевые слова:
-хаотические системы,
-критерий идентификации,
-поисковый агент,
-координатор поиска,
-ансамблевые методы поисковой идентификации.
-
-
 \xsect{АНОТАЦІЯ}
 
 \textbf{\dissauthorUa}
@@ -2792,8 +2770,8 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 Проаналізовано існуючи методи ідентифікації та моделі динаміки пошуку.
 Визначено спільні риси систем ідентифікації,
 досліджено чинники, які не дозволяють використовувати їх
-для ідентифікації параметрів хаотичних систем. обґрунтована необхідність
-створення нових систем ідентифікації.
+для ідентифікації параметрів хаотичних систем.
+Обґрунтована необхідність створення нових систем ідентифікації.
 
 Показано, что для створення систем ідентифікації, які були б працездатними
 в умовах хаотичної динаміки, необхідно використання інтегральних критеріїв.
@@ -2844,6 +2822,79 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 координатор пошуку,
 ансамблеві методи пошукової ідентифікації.
 
+\xsect{АННОТАЦИЯ}
+
+\textbf{\dissauthorRu}
+\textbf{\booknameRu}
+\textbf{--- На правах рукописи.}
+
+Диссертация на соискание ученой степени
+доктора
+\dissScopeRu\ {}
+по специальности
+\dissSpecId\ --- <<\dissSpecRu>>.
+\institutionRu, \belongRu, \cityRu, \bookyear.
+
+Работа посвящена актуальной научно-технической проблеме идентификации
+параметров сложных технических систем в режиме хаотической динамики. Нелинейные
+динамические системы, распространенные в современных технологических и
+природных процессах могут проявлять хаотические свойства в своей динамике.
+Существующие системы идентификации нелинейных динамических объектов практически
+не способны работать в таких условиях.
+
+Проанализированы существующие методы идентификации и модели динамики поиска.
+Определены общие черты систем идентификации, исследованы факторы, которые не
+позволяют использовать их для идентификации параметров хаотических систем.
+Обоснована необходимость создания новых систем идентификации.
+
+Показано, что для создания систем идентификации, которые были бы
+работоспособными в условиях хаотической динамики, необходимо использование
+интегральных критериев. Рассмотрена множество физических обоснований для
+создания критериев, как на прямом использовании физических законов, так и на
+эмпирических принципах.
+
+С целью повышения быстродействия системы идентификации предложена структура с
+использованием множества поисковых агентов и координатора поиска. Созданы
+методы оценивания параметра тройкой поисковых агентов, как при непосредственном
+использовании критерия, так и в случае применения функции качества. Исследованы
+зависимости ошибки идентификации от метода и его параметров. Создана
+група методов работы координаторов поиска, определены зависимости качества
+идентификации от параметров взаимодействия координатора с агентами.
+Создана классификация систем идентификации систем,
+которая позволяет не только кратко указывать набор
+использованных методов, а синтезировать новые системы идентификации при
+появлении новых методов работы агентов и координаторов. Исследованы свойства
+множества предложенных методов для искусственной Квазистационарный тестовой
+системы. Выбранно подмножество методов, которые целесообразно использовать в
+дальнейшем исследовании.
+
+Создано программное обеспечение ``qontrol'', которое предназначено для
+моделирования сложных нелинейных динамических систем, в том числе при анализе
+процессов идентификации систем хаотической динамики.
+
+Работоспособность и свойства разработанных методов проверено при решении задачи
+идентификации нескольких нелинейных систем, как известных систем хаотической
+динамики, так и новых. Было определено, что существуют системы, которые не
+являются хаотичными, но с точки зрения идентификации имеют с ними общие черты.
+Исследовано влияние параметров системы идентификации на качество ее работы, что
+дает основания для адаптации этих параметров. Определено, что наибольшее
+влияние имеют вид критерия и параметры динамики агентов.
+
+Свойства предложенных методов идентификации исследованы на двух реальных
+физических объектах: генератор Колпитца и системе связанных релаксационных
+элементов. Методы подтвердили свою работоспособность, и обнаружено, что
+зависимости качества идентификации от ее параметров для реальных систем имеют
+тот же вид, что и для тестовых.
+
+
+Ключевые слова:
+хаотические системы,
+критерий идентификации,
+поисковый агент,
+координатор поиска,
+ансамблевые методы поисковой идентификации.
+
+
 \xsect{ABSTRACT}
 
 \textbf{\dissauthorEn}
@@ -2854,7 +2905,59 @@ Thesis for the degree of Doctor of Technical Science in Specialization
 \dissSpecId\ --- <<\dissSpecEn>>.
 \institutionEn, \belongEn, \cityEn, \bookyear.
 
-The dissertation is devoted to
+The dissertation is devoted to the actual scientific and technical problem of
+identifying the parameters of complex technical systems in the regime of
+chaotic dynamics. Nonlinear dynamic systems common in modern technological and
+natural processes can exhibit chaotic properties in their dynamics. The
+existing systems for identifying nonlinear dynamic objects are practically
+useless in such conditions.
+
+The existing identification methods and search dynamics models are analyzed.
+Identified common features of identification systems, investigated factors that
+do not allow them to use to identify the parameters of chaotic systems. The
+necessity of creating new identification systems is grounded.
+
+It is shown that the use of integral criteria is necessary for the creation of
+identification systems that would be workable under conditions of chaotic
+dynamics. Considered a lot of physical justification for the creation of
+criteria, both on the direct use of physical laws, and on empirical principles.
+
+In order to improve the speed of the identification system, a structure is
+proposed using a variety of search agents and a search coordinator. Methods for
+estimating the parameter of the triplet of search agents are created, both with
+the direct use of the criterion and with the use of the quality function. The
+dependence of the identification error on the method and its parameters is
+investigated.
+
+A group of methods for the work of the search coordinators has been created,
+the dependencies of the identification quality on the parameters of the
+coordinator's interaction with the agents have been determined. A
+classification of system identification systems has been created, which allows
+not only briefly indicating the set of methods used, but also synthesizing new
+identification systems when new methods of work of agents and coordinators
+appear. The properties of the set of proposed methods for an artificial
+quasistationary test system are investigated. A subset of methods is selected,
+which it is expedient to use in further research.
+
+The qontrol software was created, which is intended for modeling complex
+nonlinear dynamical systems, including in the analysis of identification
+processes of chaotic dynamics systems.
+
+The working capacity and properties of the developed methods have been verified
+in solving the problem of identifying several nonlinear systems, both known
+chaotic dynamics systems, and new ones. It was determined that there are
+systems that are not chaotic, but from the point of view of identification they
+have common features. The influence of the parameters of the identification
+system on the quality of its work is investigated, which gives grounds for the
+adaptation of these parameters. It is determined that the type of criterion and
+the dynamics of agents have the greatest influence.
+
+The properties of the proposed identification methods are investigated on two
+real physical objects: the Kolpitz oscillator and the system of coupled
+relaxation elements. The methods have confirmed their efficiency, and it is
+found that the dependence of the quality of identification on its parameters
+for real systems has the same form as for the test ones.
+
 
 Keywords:
 chaotic systems,
